--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
-        <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com"> 
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="LogoNText">
             <img src="logo.svg" alt="The Cozzi Foundation Logo">
-            <h3 class="logoText">Shaping a Better Future</h3>
+            <h3 class="logoText">Promoting Prosperity For Generations To Come</h3>
         </div>
     </body>
 </html>
